Corregido error al ocultar descripcion de mineria de datos

--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos.html
@@ -4,11 +4,11 @@
 {% block siderbar %}
     <div>
         <h2><em>Filtro de página</em></h2>
-        <button onclick="$('#descripcion').show(); $('#etapasMineriaDatos').hide(); $('#informacionInteres').hide()">Descripcion</button>
+        <button onclick="$('#descripcion').show(); $('#informacionInteres').hide(); $('#etapasMineriaDatos').hide()">Descripcion</button>
         <br />
         <button onclick="$('#informacionInteres').show(); $('#descripcion').hide(); $('#etapasMineriaDatos').hide()">InformacionInteres</button>
         <br />
-        <button onclick="$('#etapasMineriaDatos').show(); $('descripcion').hide(); $('#informacionInteres').hide()">EtapasMineriaDatos</button>
+        <button onclick="$('#etapasMineriaDatos').show(); $('#descripcion').hide(); $('#informacionInteres').hide()">EtapasMineriaDatos</button>
     </div>
 {% endblock %}
 
