Mejora de la seccion del proceso de mineria de datos

--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos.html
@@ -163,12 +163,10 @@
         <h1>Obtencion de Datos</h1>
         <p>
             Esta fase de la minería de datos se refiere a obtener los datos o conjuntos de datos que se desean predecir, calcular o inferir. Dichos datos sirven para determinar los cálculos o los procesos.
+            <br />
+                <a href="https://drive.google.com/file/d/1inf1-ffPwO2GP91U7LR-PGtOaf6hzhui/view?usp=drive_link" target="_blank" class="btn btn-primary btn-large">Tutorial Obtención Datos &raquo;</a>
         </p>
-        <h2><em>Videos Tutorial</em></h2>
-            <p>
-                <a href="https://drive.google.com/file/d/1inf1-ffPwO2GP91U7LR-PGtOaf6hzhui/view?usp=drive_link" target="_blank" class="btn btn-primary btn-large">PyScript &raquo;</a>
-                <a href="" target="_blank" class="btn btn-primary btn-large">Bash &raquo;</a>
-            </p>
+        
     </div>
     <!--Etapa de mineria de datos: Preprocesamiento de Datos -->
     <div id="PreprocesamientoDatos" style="display:none">
@@ -177,12 +175,10 @@
             El Preprocesamiento de Datos consiste en un conjunto de técnicas utilizadas para preparar los datos para su uso en un sistema IA.
             <br />
             <a href="https://blog.powerdata.es/el-valor-de-la-gestion-de-datos/preprocesar-y-normalizar-datos-4-pasos-para-limpiar-y-mejorar-datos" class="btn btn-primary btn-large" target="_blank">Aprender más&raquo;</a>
+            <br />
+            <a href="https://drive.google.com/file/d/1agoEN59kG8IdnoPFrzxCcYi6yp0JSDWl/view?usp=sharing" target="_blank" class="btn btn-primary btn-large">Tutorial Preprocesamiento Datos &raquo;</a>
         </p>
-        <h2><em>Videos Tutorial</em></h2>
-        <p>
-            <a href="" target="_blank" class="btn btn-primary btn-large">PyScript &raquo;</a>
-            <a href="" target="_blank" class="btn btn-primary btn-large">Bash &raquo;</a>    
-        </p>
+        
     </div>
     <!--Etapa de mineria de datos: Algoritmos de Mineria de Datos -->
     <div id="Algoritmos" style="display:none">
@@ -191,25 +187,20 @@
             Un algoritmo en minería de datos es un conjunto de heurísticas y cálculos que permiten crear un modelo a partir de datos.
             <br />
             <a href="https://learn.microsoft.com/es-es/analysis-services/data-mining/data-mining-algorithms-analysis-services-data-mining?view=asallproducts-allversions" class="btn btn-primary btn-large">Aprender más&raquo;</a>
+            <br />
+            <a href="" target="_blank" class="btn btn-primary btn-large">Tutorial Algoritmos de Mineria de Datos &raquo;</a>
         </p>
-        <!--Videos tutorial-->
-        <h2><em>Videos Tutorial</em></h2>
-        <p>
-            <a href="" target="_blank" class="btn btn-primary btn-large">PyScript &raquo;</a>
-            <a href="" target="_blank" class="btn btn-primary btn-large">Bash &raquo;</a>
-        </p>
+        
     </div>
     <!--Etapa de mineria de datos: Evaluacion de Resultados -->
     <div id="EvaluacionResultados" style="display:none">
         <h1>Evaluacion de Resultados</h1>
         <p>
             La evaluación de resultados se efectúa una vez que se ha obtenido el modelo, comprobando que las conclusiones obtenidas son válidas y satisfactorias.
+            <br />
+            <a href="" target="_blank" class="btn btn-primary btn-large">Tutorial Evaluacion de Resultados &raquo;</a>
         </p>
-        <!--Videos tutoriales-->
-        <h2>Videos tutorial</h2>
-        <p>
-            <a href="" target="_blank" class="btn btn-primary btn-large">Evaluacion de Resultados &raquo;</a>
-        </p>
+        
     </div>
 </div>
 
