--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos.html
@@ -188,7 +188,7 @@
             <br />
             <a href="https://learn.microsoft.com/es-es/analysis-services/data-mining/data-mining-algorithms-analysis-services-data-mining?view=asallproducts-allversions" class="btn btn-primary btn-large">Aprender más&raquo;</a>
             <br />
-            <a href="" target="_blank" class="btn btn-primary btn-large">Tutorial Algoritmos de Mineria de Datos &raquo;</a>
+            <a href="https://drive.google.com/file/d/1bgE5E9oWzfJUR57oxY6vnzEogkZYgoq-/view?usp=sharing" target="_blank" class="btn btn-primary btn-large">Tutorial Algoritmos de Mineria de Datos &raquo;</a>
         </p>
         
     </div>
