--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos.html
@@ -198,7 +198,7 @@
         <p>
             La evaluación de resultados se efectúa una vez que se ha obtenido el modelo, comprobando que las conclusiones obtenidas son válidas y satisfactorias.
             <br />
-            <a href="" target="_blank" class="btn btn-primary btn-large">Tutorial Evaluacion de Resultados &raquo;</a>
+            <a href="https://drive.google.com/file/d/12rgnMPFJvlSLdCSv0P6n1YPsJXmv8lrg/view?usp=sharing" target="_blank" class="btn btn-primary btn-large">Tutorial Evaluacion de Resultados &raquo;</a>
         </p>
         
     </div>
