Reduccion Tiempo video obtencion datos

--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos.html
@@ -164,7 +164,7 @@
         <p>
             Esta fase de la minería de datos se refiere a obtener los datos o conjuntos de datos que se desean predecir, calcular o inferir. Dichos datos sirven para determinar los cálculos o los procesos.
             <br />
-                <a href="https://drive.google.com/file/d/1inf1-ffPwO2GP91U7LR-PGtOaf6hzhui/view?usp=drive_link" target="_blank" class="btn btn-primary btn-large">Tutorial Obtención Datos &raquo;</a>
+                <a href="https://drive.google.com/file/d/1LCOqDe4lgN7jOZpKig0LqHwxlUGf88cl/view?usp=sharing" target="_blank" class="btn btn-primary btn-large">Tutorial Obtención Datos &raquo;</a>
         </p>
         
     </div>
