Reduccion tiempo video preprocesamiento datos. Video parte 1

--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos.html
@@ -175,10 +175,13 @@
             El Preprocesamiento de Datos consiste en un conjunto de técnicas utilizadas para preparar los datos para su uso en un sistema IA.
             <br />
             <a href="https://blog.powerdata.es/el-valor-de-la-gestion-de-datos/preprocesar-y-normalizar-datos-4-pasos-para-limpiar-y-mejorar-datos" class="btn btn-primary btn-large" target="_blank">Aprender más&raquo;</a>
-            <br />
-            <a href="https://drive.google.com/file/d/1agoEN59kG8IdnoPFrzxCcYi6yp0JSDWl/view?usp=sharing" target="_blank" class="btn btn-primary btn-large">Tutorial Preprocesamiento Datos &raquo;</a>
         </p>
-        
+	<h3>Tutoriales</h3>
+        <p>
+		<a href="https://drive.google.com/file/d/1JYXg2FUodjyjSkmvquwu1WNUdratuMJV/view?usp=sharing" target="_blank" class="btn btn-primary btn-large">Tutorial Preprocesamiento Datos. Parte 1 &raquo;</a>
+		<br />
+		<a href="" target="_blank" class="btn btn-primary btn-large">Tutorial Preprocesamiento Datos. Parte 2 &raquo;</a>
+	</p>
     </div>
     <!--Etapa de mineria de datos: Algoritmos de Mineria de Datos -->
     <div id="Algoritmos" style="display:none">
