Video preprocesamiento datos. Parte 2

--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos.html
@@ -180,7 +180,7 @@
         <p>
 		<a href="https://drive.google.com/file/d/1JYXg2FUodjyjSkmvquwu1WNUdratuMJV/view?usp=sharing" target="_blank" class="btn btn-primary btn-large">Tutorial Preprocesamiento Datos. Parte 1 &raquo;</a>
 		<br />
-		<a href="" target="_blank" class="btn btn-primary btn-large">Tutorial Preprocesamiento Datos. Parte 2 &raquo;</a>
+		<a href="https://drive.google.com/file/d/1Phd4hKnV3f73TDKaEVdOBdPAMNuVVAUu/view?usp=sharing" target="_blank" class="btn btn-primary btn-large">Tutorial Preprocesamiento Datos. Parte 2 &raquo;</a>
 	</p>
     </div>
     <!--Etapa de mineria de datos: Algoritmos de Mineria de Datos -->
