Reduccion tiempo video algoritmos. Realizacion video parte 1

--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos.html
@@ -190,9 +190,12 @@
             Un algoritmo en minería de datos es un conjunto de heurísticas y cálculos que permiten crear un modelo a partir de datos.
             <br />
             <a href="https://learn.microsoft.com/es-es/analysis-services/data-mining/data-mining-algorithms-analysis-services-data-mining?view=asallproducts-allversions" class="btn btn-primary btn-large">Aprender más&raquo;</a>
-            <br />
-            <a href="https://drive.google.com/file/d/1bgE5E9oWzfJUR57oxY6vnzEogkZYgoq-/view?usp=sharing" target="_blank" class="btn btn-primary btn-large">Tutorial Algoritmos de Mineria de Datos &raquo;</a>
         </p>
+	<h3>Tutoriales</h3>
+	<p>
+		<a href="https://drive.google.com/file/d/1B7-8FEmp5CZAWCvAqoWfJaa7NT2HDjG7/view?usp=sharing" target="_blank" class="btn btn-primary btn-large">Tutorial Algoritmos de Mineria de Datos. Parte 1 &raquo;</a>	
+		<a href="" target="_blank" class="btn btn-primary btn-large">Tutorial Algoritmos de Mineria de Datos. Parte 2 &raquo;</a>
+	</p>
         
     </div>
     <!--Etapa de mineria de datos: Evaluacion de Resultados -->
