Video Algoritmos. Parte 2

--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos.html
@@ -194,7 +194,7 @@
 	<h3>Tutoriales</h3>
 	<p>
 		<a href="https://drive.google.com/file/d/1B7-8FEmp5CZAWCvAqoWfJaa7NT2HDjG7/view?usp=sharing" target="_blank" class="btn btn-primary btn-large">Tutorial Algoritmos de Mineria de Datos. Parte 1 &raquo;</a>	
-		<a href="" target="_blank" class="btn btn-primary btn-large">Tutorial Algoritmos de Mineria de Datos. Parte 2 &raquo;</a>
+		<a href="https://drive.google.com/file/d/1HuH2g9eUXP0SNUHEJIKJne3CaM1E96Bv/view?usp=sharing" target="_blank" class="btn btn-primary btn-large">Tutorial Algoritmos de Mineria de Datos. Parte 2 &raquo;</a>
 	</p>
         
     </div>
