Reduccion tiempo video conclusiones. Parte 1

--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos.html
@@ -203,10 +203,13 @@
         <h1>Evaluacion de Resultados</h1>
         <p>
             La evaluación de resultados se efectúa una vez que se ha obtenido el modelo, comprobando que las conclusiones obtenidas son válidas y satisfactorias.
-            <br />
-            <a href="https://drive.google.com/file/d/12rgnMPFJvlSLdCSv0P6n1YPsJXmv8lrg/view?usp=sharing" target="_blank" class="btn btn-primary btn-large">Tutorial Evaluacion de Resultados &raquo;</a>
         </p>
-        
+        <h3>Tutoriales</h3>
+	<p>
+		<a href="https://drive.google.com/file/d/1hB3ClNyepmTNNIvNTxoMUFcpkU8kH05O/view?usp=sharing" target="_blank" class="btn btn-primary btn-large">Evaluacion de Resultados. Parte 1 &raquo;</a>
+	        <br />
+		<a href="" target="_blank" class="btn btn-primary btn-large">Evaluacion de Resultados. Parte 2 &raquo;</a>
+	</p>
     </div>
 </div>
 
