Video conclusiones Parte 2

--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos.html
@@ -208,7 +208,7 @@
 	<p>
 		<a href="https://drive.google.com/file/d/1hB3ClNyepmTNNIvNTxoMUFcpkU8kH05O/view?usp=sharing" target="_blank" class="btn btn-primary btn-large">Evaluacion de Resultados. Parte 1 &raquo;</a>
 	        <br />
-		<a href="" target="_blank" class="btn btn-primary btn-large">Evaluacion de Resultados. Parte 2 &raquo;</a>
+		<a href="https://drive.google.com/file/d/1DQIvLixFHOr3fop9RZvL_Dh-kkyYqb4_/view?usp=sharing" target="_blank" class="btn btn-primary btn-large">Evaluacion de Resultados. Parte 2 &raquo;</a>
 	</p>
     </div>
 </div>
