--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/simuladorPython.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/simuladorPython.html
@@ -202,9 +202,10 @@
             <!--Añadimos un menu de filtro-->
             <div class="col-sm-3" style="">
                 <em>Etapas del proceso de mineria de datos</em>
-                <button onclick="$('#ObtencionDatos').show(); $('#PreprocesamientoDatos').hide(), $('#EjerciciosPropuestos').hide()">1. Obtención de Datos</button>
-                <button onclick="$('#PreprocesamientoDatos').show();$('#ObtencionDatos').hide(), $('#EjerciciosPropuestos').hide()">2. Preprocesamiento de Datos</button>
-                <button onclick="$('#EjerciciosPropuestos').show(),$('#PreprocesamientoDatos').hide();$('#ObtencionDatos').hide()">Ejercicios propuestos</button>
+                <button onclick="$('#ObtencionDatos').show(); $('#PreprocesamientoDatos').hide(), $('#EjerciciosPropuestos').hide(), $('#Algoritmos').hide()">Paso 1. Obtención de Datos</button>
+                <button onclick="$('#PreprocesamientoDatos').show();$('#ObtencionDatos').hide(), $('#EjerciciosPropuestos').hide(), $('#Algoritmos').hide()">Paso 2. Preprocesamiento de Datos</button>
+                <button onclick="$('#Algoritmos').show(),$('#PreprocesamientoDatos').hide();$('#ObtencionDatos').hide(), $('#EjerciciosPropuestos').hide()">Paso 3. Algoritmos</button>
+                <button onclick="$('#EjerciciosPropuestos').show(), $('#PreprocesamientoDatos').hide(), $('#ObtencionDatos').hide(),$('#Algoritmos').hide()">Ejercicios propuestos</button>
             </div>
             
             <div class="col-sm-10">
@@ -224,6 +225,23 @@
                             <li>Conjunto de datos no etiqueta: Conjunto de datos que no incluye las etiquetas de las columnas.</li>
                         </ul>
                         <h3>Conjunto de datos etiquetado</h3>
+                        En esta sección, obtendremos el conjunto de datos titanic. Dicho conjunto de datos contiene información sobre los pasajeros del titanic quienes fueron víctimas
+                        de los naufragios más infames de la historia.
+                        <br />Dicho conjunto de datos aporta la siguiente información:
+                        <ul>
+                            <li>PassengerId: Representa el identificador del pasajero</li>
+                            <li>Survived: Representa la supervivencia del pasajero (0=No, 1=Sí).</li>
+                            <li>Pclass: Representa la clase del ticket (1=Primero, 2=Segundo, 3=Tercero).</li>
+                            <li>Name: Representa el nombre del pasajero</li>
+                            <li>Sex: Representa el sexo del pasajero (male=Masculino, female=Femenino)</li>
+                            <li>Age: Representa la edad del pasajero, en años</li>
+                            <li>SibSp: Representa el número de hermanos o cónyuges a bordo del Titanic</li>
+                            <li>Parch: Representa el número de padres o hijos a bordo del Titanic</li>
+                            <li>Ticket: Representa el número del ticket</li>
+                            <li>Fare: Representa la tarifa del pasajero</li>
+                            <li>Cabin: Representa el número de la cabina</li>
+                            <li>Embarked: Representa el puerto de embarque</li>
+                        </ul>
                         <h4>Ejemplo 1</h4>
                         <py-repl>
                             import pandas as pd
@@ -250,7 +268,10 @@
                             display(titanic.head())
                         </py-repl>
                         <h3>Conjunto de datos no etiquetado</h3>
-                        <h4>Ejemplo 3</h4>
+                        Para esta sección, se obtendrá el conjunto de datos iris.
+                        <br />El conjunto de datos iris contiene información de un estudio de 3 especies de Iris (Iris setosa, Iris Virginica e Iris versicolor).
+                        <br />De cada muestra se midieron 4 características: el largo y el ancho de los sépalos y pétalos, en centímetros.
+                        <br />En el código a continuación, veremos un método para obtener dicho conjunto de datos.
                         <py-repl>
                             import pandas as pd
                             from pyodide.http import open_url
@@ -602,6 +623,15 @@
 
                 </div>
                 <!--Paso 3: Algoritmos-->
+                <div id="Algoritmos">
+                    <h1>Paso 3. Algoritmos</h1>
+                    En esta sección veremos distintos métodos de implementar algoritmos de minería de datos, así como distintas métricas para analizar el los resultados obtenidos en dichos algoritmos.
+                    <br />Para este tutorial, se utilizará el conjunto de datos iris.
+                    <h2>Obtención del conjunto de datos</h2>
+                    
+                    En el código a continuación, se obtendrá el conjunto de datos breast cancer:
+
+                </div>
                 <!--Paso 4: Conclusiones-->
 
                 <!--Ejercicios propuestos-->
